src/pages/work/index.module.sass
@import '../../styles/colors'
@import '../../styles/mixins'

article.project-overview
  display: flex
  flex-direction: column
  justify-content: center
  align-items: flex-start

  position: absolute
  top: 0
  bottom: 80px
  width: 100%
  padding: 0 70px 50px 60px


  h2
    font-size: 50px
    @include font-weight(760)
    letter-spacing: -.02em
    margin: 0

  p
    font-family: 'Inter Variable', 'Helvetica Neue', sans-serif
    font-size: 19px
    @include font-weight(400)
    color: transparentize($black, .25)
    line-height: 1.33em
    margin: 1em 0 1.2em

  a.read-more
    font-size: 18px

  ul.tags-list
    list-style-type: none
    display: flex
    padding: 0
    margin: 0 0 5px

    li
      font-size: 16px
      @include font-weight(650)
      color: transparentize($black, .75)
      cursor: default

      &:not(:last-child)::after
        content: '\B7'
        display: inline-block
        padding: 0 .3em
        transform: scale(1.25)

